opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/async_sendfile"
bug-reports: "https://github.com/janestreet/async_sendfile/issues"
dev-repo: "git+https://github.com/janestreet/async_sendfile.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/async_sendfile/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "async_kernel"
  "async_unix"
  "core"
  "core_unix"
  "ppx_jane"
  "dune"         {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Thin wrapper around [Linux_ext.sendfile] to send full files"
description: "
"
